--- a/src/editor-window.ui
+++ b/src/editor-window.ui
@@ -182,6 +182,7 @@ Or, press Ctrl+W to close the window.</property>
                 </style>
                 <child>
                   <object class="GtkBox">
+                    <property name="hexpand">false</property>
                     <property name="orientation">vertical</property>
                     <property name="width-request">300</property>
                     <property name="margin-start">12</property>
@@ -281,7 +282,10 @@ Or, press Ctrl+W to close the window.</property>
                       </object>
                     </child>
                     <child>
-                      <object class="AdwPreferencesGroup" id="scheme_group">
+                      <object class="GtkGrid" id="scheme_group">
+                        <property name="hexpand">true</property>
+                        <property name="column-spacing">9</property>
+                        <property name="row-spacing">9</property>
                         <property name="margin-top">12</property>
                       </object>
                     </child>
