page: match top/bottom  margin to textview
We want the top and bottom margin to match the editor area so that when we
are the boundaries they have similar alignments.

--- a/src/editor-page.ui
+++ b/src/editor-page.ui
@@ -38,6 +38,8 @@
                 </child>
                 <child>
                   <object class="GtkSourceMap" id="map">
+                    <property name="top-margin">16</property>
+                    <property name="bottom-margin">16</property>
                     <property name="left-margin">12</property>
                     <property name="hexpand">false</property>
                     <property name="visible">false</property>
