css: tweak line-height for source map

--- a/src/TextEditor.css
+++ b/src/TextEditor.css
@@ -103,6 +103,11 @@
   padding: 3px;
 }
 
+textview.source-map {
+  font-family: BuilderBlocks;
+  font-size: 4px;
+  line-height: 6px;
+}
 textview.source-map:dir(ltr) {
   border-left: 1px solid @borders;
 }
