css: soften overview map borders

--- a/src/TextEditor.css
+++ b/src/TextEditor.css
@@ -103,6 +103,11 @@
   padding: 3px;
 }
 
+textview.source-map slider {
+  border-radius: 9px;
+  margin: 0 8px;
+}
+
 textview.source-map {
   font-family: BuilderBlocks;
   font-size: 4px;
