sourceview: add ctrl+l to select current line
It appears that ctrl+l is fairly common select current line functionality,
so we can go ahead and follow suit.

Additionally, you can repeatedly press ctrl+l to select an additional
line. Furthermore, the current selection is extended to boundaries so you
can take a word selection and expand it to the whole line w/ ctrl+l.

Fixes #191

--- a/src/help-overlay.ui
+++ b/src/help-overlay.ui
@@ -225,6 +225,12 @@
                 <property name="title" translatable="yes" context="shortcut window">Unselect all</property>
               </object>
             </child>
+            <child>
+              <object class="GtkShortcutsShortcut">
+                <property name="accelerator">&lt;ctrl&gt;l</property>
+                <property name="title" translatable="yes" context="shortcut window">Select current line</property>
+              </object>
+            </child>
           </object>
         </child>
         <child>
