css: tweak overview map font styling a bit more

--- a/src/TextEditor.css
+++ b/src/TextEditor.css
@@ -104,8 +104,8 @@ textview.source-map slider {
 
 textview.source-map {
   font-family: BuilderBlocks;
-  font-size: 2px;
-  line-height: 4px;
+  font-size: 1.75pt;
+  line-height: 5px;
 }
 textview.source-map:dir(ltr) {
   border-left: 1px solid @borders;
