tab-menu: implement tab menus for tab bar
These were lost during the transition from notebook back to AdwTabBar. We
also handle the cases with modified pages a bit better now by joining them
together into a single dialog request.

Fixes #199

--- a/src/editor-window.ui
+++ b/src/editor-window.ui
@@ -150,6 +150,7 @@
                         <property name="hexpand">true</property>
                         <property name="vexpand">true</property>
                         <signal name="close-page" handler="on_tab_view_close_page_cb" swapped="true"/>
+                        <signal name="setup-menu" handler="on_tab_view_setup_menu_cb" swapped="true"/>
                       </object>
                     </child>
                   </object>
