--- a/src/editor-window.ui
+++ b/src/editor-window.ui
@@ -151,6 +151,7 @@
                         <property name="vexpand">true</property>
                         <signal name="close-page" handler="on_tab_view_close_page_cb" swapped="true"/>
                         <signal name="setup-menu" handler="on_tab_view_setup_menu_cb" swapped="true"/>
+                        <signal name="create-window" handler="on_tab_view_create_window_cb" swapped="true"/>
                       </object>
                     </child>
                   </object>
