popover: use GtkListBox instead of GtkListView
There appears to be a lot of cycling of widgetry in GtkListView which
results in extra action muxer work. Instead, we can go with something
much simpler since we have relatively small lists of recents.

Related #192

--- a/src/editor-sidebar-row.ui
+++ b/src/editor-sidebar-row.ui
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <interface>
   <requires lib="gtk+" version="4.0"/>
-  <template class="EditorSidebarRow" parent="GtkWidget">
+  <template class="EditorSidebarRow" parent="GtkListBoxRow">
     <child>
       <object class="GtkGrid" id="grid">
         <property name="margin-top">3</property>
