--- a/src/editor-open-popover.ui
+++ b/src/editor-open-popover.ui
@@ -59,16 +59,10 @@
                     <property name="propagate-natural-width">True</property>
                     <property name="vexpand">True</property>
                     <child>
-                      <object class="GtkListView" id="list_view">
-                        <signal name="activate" handler="on_list_view_activate_cb" swapped="true" object="EditorOpenPopover"/>
-                        <property name="orientation">vertical</property>
-                        <property name="single-click-activate">True</property>
-                        <property name="factory">
-                          <object class="GtkSignalListItemFactory">
-                            <signal name="bind" handler="on_list_item_bind_cb" swapped="true" object="EditorOpenPopover"/>
-                            <signal name="unbind" handler="on_list_item_unbind_cb" swapped="true" object="EditorOpenPopover"/>
-                          </object>
-                        </property>
+                      <object class="GtkListBox" id="list_box">
+                        <signal name="row-activated" handler="on_list_box_row_activated_cb" swapped="true" object="EditorOpenPopover"/>
+                        <property name="activate-on-single-click">True</property>
+                        <property name="selection-mode">none</property>
                       </object>
                     </child>
                   </object>
