--- a/src/editor-sidebar-row.ui
+++ b/src/editor-sidebar-row.ui
@@ -76,6 +76,7 @@
             <property name="valign">center</property>
             <property name="halign">end</property>
             <property name="icon-name">window-close-symbolic</property>
+            <signal name="clicked" handler="on_remove_clicked_cb" swapped="true" object="EditorSidebarRow"/>
             <style>
               <class name="circular"/>
               <class name="flat"/>
