vim: add support for vim keybindings
This is currently hidden behind the gsettings 'keybindings' key. You may
`gsettings set org.gnome.TextEditor keybindings vim` to enable it, although
in Flatpak you'll need to edit the settings file.

This uses the new GtkSourceVimIMContext along with a command bar widget on
the bottom that is only visible when Vim bindings are enabled.

Use with caution, and file bugs please (or better yet, fix them).

--- a/src/TextEditor.css
+++ b/src/TextEditor.css
@@ -117,3 +117,11 @@ textview.source-map:dir(rtl) {
 flap > scrolledwindow.preferences > viewport {
   background: @theme_bg_color;
 }
+
+label.vim-command-bar {
+  font-family: monospace;
+  min-width: 100px;
+  padding: 3px 6px;
+  background: @theme_bg_color;
+  border-top: 1px solid @borders;
+}
