vim: show incremental command text
This is updated as the user types to help display interactive commands like
1000G.

--- a/src/TextEditor.css
+++ b/src/TextEditor.css
@@ -118,7 +118,7 @@ flap > scrolledwindow.preferences > viewport {
   background: @theme_bg_color;
 }
 
-label.vim-command-bar {
+box.statusbar {
   font-family: monospace;
   min-width: 100px;
   padding: 3px 6px;
