css: tweak non-focus color for light mode
This is slightly different color from the mockups (even though they have
a weird blue halo in the mockup, which appears to be a mistake).

--- a/src/TextEditor.css
+++ b/src/TextEditor.css
@@ -63,7 +63,7 @@
 }
 .org-gnome-TextEditor checkbutton.theme-selector.light:not(:checked) {
   background-color: #fff;
-  border-color: #e2e1de;
+  border-color: #dcdddd;
 }
 .org-gnome-TextEditor checkbutton.theme-selector.dark:not(:checked) {
   background-color: #2e3436;
