css: fix positioning of check image
This can be aligned with the border by using negative margins.

Related #225

--- a/src/TextEditor.css
+++ b/src/TextEditor.css
@@ -53,7 +53,7 @@
   box-shadow: none;
   min-width: 12px;
   min-height: 12px;
-  margin: 24px 0 0 24px;
+  margin: 24px -4px -4px 24px;
   padding: 2px;
 }
 .org-gnome-TextEditor checkbutton.theme-selector radio:checked {
