themeselector: add follow button for theme selector
This doesn't actually wire up the "follow" state to track libadwaita
changes, but it does let us see how the styling will work. In particular
my concern is making the border match the mockups.

In the mockups, the border is different for the light and dark half of
the button. For us to do that, we'd likely need to have two buttons and
clip them in a snapshot. An alternative would be to use an SVG.

Instead, this just uses a dark border that looks relatively good in both
light and dark modes.

Related #225

--- a/src/TextEditor.css
+++ b/src/TextEditor.css
@@ -38,11 +38,16 @@
   border-color: transparent;
   border-radius: 9999px;
 }
+.org-gnome-TextEditor checkbutton.theme-selector.follow:checked,
 .org-gnome-TextEditor checkbutton.theme-selector.light:checked,
 .org-gnome-TextEditor checkbutton.theme-selector.dark:checked {
   border-color: @theme_selected_bg_color;
   border-width: 2px;
   margin: 9px 0 9px 0;
+}
+.org-gnome-TextEditor checkbutton.theme-selector.follow {
+  background: linear-gradient(to bottom right, #fff 50%, #2e3436 50%);
+  border-color: #2e3436;
 }
 .org-gnome-TextEditor checkbutton.theme-selector.light {
   background-color: #fff;
