css: tweak follow system theme border in dark mode
This looks better than having a single border color for both light and
dark themes.

Related #225

--- a/src/TextEditor.css
+++ b/src/TextEditor.css
@@ -49,6 +49,9 @@
   background: linear-gradient(to bottom right, #fff 50%, #2e3436 50%);
   border-color: #2e3436;
 }
+.org-gnome-TextEditor.dark checkbutton.theme-selector.follow {
+  border-color: #dcdddd;
+}
 .org-gnome-TextEditor checkbutton.theme-selector.light {
   background-color: #fff;
   border-color: #dcdddd;
