--- a/src/editor-theme-selector.ui
+++ b/src/editor-theme-selector.ui
@@ -1,9 +1,10 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <interface>
   <template class="EditorThemeSelector" parent="GtkWidget">
+    <property name="hexpand">true</property>
     <child>
       <object class="GtkBox" id="box">
-        <property name="halign">center</property>
+        <property name="hexpand">true</property>
         <property name="orientation">horizontal</property>
         <property name="spacing">12</property>
         <child>
@@ -12,6 +13,8 @@
               <class name="theme-selector"/>
               <class name="follow"/>
             </style>
+            <property name="hexpand">true</property>
+            <property name="halign">center</property>
             <property name="focus-on-click">false</property>
             <property name="action-name">settings.style-variant</property>
             <property name="action-target">'follow'</property>
@@ -27,6 +30,8 @@
               <class name="theme-selector"/>
               <class name="light"/>
             </style>
+            <property name="hexpand">true</property>
+            <property name="halign">center</property>
             <property name="focus-on-click">false</property>
             <property name="action-name">settings.style-variant</property>
             <property name="action-target">'light'</property>
@@ -42,6 +47,8 @@
               <class name="theme-selector"/>
               <class name="dark"/>
             </style>
+            <property name="hexpand">true</property>
+            <property name="halign">center</property>
             <property name="group">light</property>
             <property name="focus-on-click">false</property>
             <property name="action-name">settings.style-variant</property>
