--- a/src/menus.ui
+++ b/src/menus.ui
@@ -8,6 +8,11 @@
     </section>
     <section>
       <item>
+        <attribute name="custom">zoom</attribute>
+      </item>
+    </section>
+    <section>
+      <item>
         <attribute name="label" translatable="yes">_New Window</attribute>
         <attribute name="action">app.new-window</attribute>
         <attribute name="accel">&lt;control&gt;n</attribute>
