menus: tweak menu sections
Fixes #231

--- a/src/menus.ui
+++ b/src/menus.ui
@@ -31,29 +31,21 @@
         <attribute name="action">page.save-as</attribute>
         <attribute name="accel">&lt;control&gt;&lt;shift&gt;s</attribute>
       </item>
-    </section>
-    <section>
-      <item>
-        <attribute name="id">copy-all</attribute>
-        <attribute name="label" translatable="yes">_Copy All</attribute>
-        <attribute name="action">page.copy-all</attribute>
-        <attribute name="accel">&lt;control&gt;&lt;shift&gt;c</attribute>
-      </item>
       <item>
         <attribute name="id">discard-changes</attribute>
         <attribute name="label" translatable="yes">_Discard Changes</attribute>
         <attribute name="action">page.discard-changes</attribute>
       </item>
+    </section>
+    <section>
       <item>
         <attribute name="label" translatable="yes">_Find/Replace…</attribute>
         <attribute name="action">page.begin-search</attribute>
         <attribute name="accel">&lt;control&gt;f</attribute>
       </item>
-    </section>
-    <section>
       <item>
         <attribute name="id">print</attribute>
-        <attribute name="label" translatable="yes">_Print…</attribute>
+        <attribute name="label" translatable="yes">_Print</attribute>
         <attribute name="action">page.print</attribute>
         <attribute name="accel">&lt;control&gt;p</attribute>
       </item>
