window: use ctrl+, to show preferences
We use this in Builder, and it's also in mockups in #231

--- a/src/menus.ui
+++ b/src/menus.ui
@@ -54,6 +54,7 @@
       <item>
         <attribute name="label" translatable="yes">_Preferences</attribute>
         <attribute name="action">win.show-preferences</attribute>
+        <attribute name="accel">&lt;control&gt;comma</attribute>
       </item>
       <item>
         <attribute name="label" translatable="yes">_Keyboard Shortcuts</attribute>
