--- a/src/TextEditor.css
+++ b/src/TextEditor.css
@@ -82,17 +82,27 @@
 
 /* EditorOpenPopover */
 
-.org-gnome-TextEditor .open-popover listview row {
+.org-gnome-TextEditor .open-popover contents {
+  padding: 0;
+}
+.org-gnome-TextEditor .open-popover scrolledwindow scrollbar.vertical {
+  margin-top: 3px;
+  margin-bottom: 3px;
+}
+.org-gnome-TextEditor .open-popover list row {
   border-bottom: 1px solid alpha(@borders, 0.4);
 }
-.org-gnome-TextEditor .open-popover listview row:last-child {
-  border-bottom: 1px solid transparent;
+.org-gnome-TextEditor .open-popover list row:last-child {
+  border-bottom: none;
 }
-.org-gnome-TextEditor .open-popover listview row button {
+.org-gnome-TextEditor .open-popover list row button {
   padding: 3px;
   margin: 0;
   min-height: 24px;
   min-width: 24px;
+}
+.org-gnome-TextEditor .open-popover list row:focus {
+  background: alpha(currentColor, .07);
 }
 
 
