--- a/src/editor-sidebar-row.ui
+++ b/src/editor-sidebar-row.ui
@@ -30,7 +30,7 @@
         <child>
           <object class="GtkLabel" id="title">
             <property name="halign">start</property>
-            <property name="ellipsize">end</property>
+            <property name="ellipsize">start</property>
             <property name="hexpand">true</property>
             <layout>
               <property name="column">1</property>
@@ -40,9 +40,12 @@
         </child>
         <child>
           <object class="GtkLabel" id="subtitle">
-            <property name="halign">start</property>
-            <property name="ellipsize">middle</property>
+            <property name="ellipsize">end</property>
+            <property name="width-chars">25</property>
+            <property name="max-width-chars">25</property>
             <property name="hexpand">true</property>
+            <property name="single-line-mode">True</property>
+            <property name="xalign">0</property>
             <style>
               <class name="dim-label"/>
             </style>
@@ -51,7 +54,7 @@
             </attributes>
             <layout>
               <property name="row">1</property>
-              <property name="column">2</property>
+              <property name="column">1</property>
             </layout>
           </object>
         </child>
@@ -59,6 +62,7 @@
           <object class="GtkLabel" id="age">
             <property name="valign">center</property>
             <property name="halign">end</property>
+            <property name="visible">false</property>
             <attributes>
               <attribute name="scale" value="0.8333"/>
             </attributes>
@@ -66,7 +70,7 @@
               <class name="dim-label"/>
             </style>
             <layout>
-              <property name="column">1</property>
+              <property name="column">2</property>
               <property name="row">1</property>
             </layout>
           </object>
