--- a/src/editor-open-popover.ui
+++ b/src/editor-open-popover.ui
@@ -44,12 +44,20 @@
             <property name="vhomogeneous">false</property>
             <property name="hhomogeneous">false</property>
             <child>
-              <object class="GtkLabel" id="empty">
-                <property name="label" translatable="yes">No Recent Documents</property>
-                <property name="margin-start">6</property>
-                <property name="margin-top">42</property>
-                <property name="margin-bottom">42</property>
-                <property name="margin-end">6</property>
+              <object class="GtkFrame" id="empty">
+                <property name="margin-top">12</property>
+                <property name="margin-bottom">12</property>
+                <property name="margin-start">12</property>
+                <property name="margin-end">12</property>
+                <child>
+                  <object class="GtkLabel">
+                    <property name="label" translatable="yes">No Recent Documents</property>
+                    <property name="margin-start">6</property>
+                    <property name="margin-top">42</property>
+                    <property name="margin-bottom">42</property>
+                    <property name="margin-end">6</property>
+                  </object>
+                </child>
               </object>
             </child>
             <child>
