menus: use "Document Type"
This just changes "Highlight Mode" to "Document Type". It does not yet
alter the menu contents to contain the current documents type as that
will require further mutation.

Related #230

--- a/src/editor-language-dialog.ui
+++ b/src/editor-language-dialog.ui
@@ -2,7 +2,7 @@
 <interface>
   <requires lib="gtk+" version="4.0"/>
   <template class="EditorLanguageDialog" parent="GtkWindow">
-    <property name="title" translatable="yes">Highlight Mode</property>
+    <property name="title" translatable="yes">Document Type</property>
     <child type="titlebar">
       <object class="GtkHeaderBar"/>
     </child>
