--- a/src/menus.ui
+++ b/src/menus.ui
@@ -138,7 +138,7 @@
         <attribute name="action">settings.spellcheck</attribute>
       </item>
       <item>
-        <attribute name="label" translatable="yes">_Highlight Mode</attribute>
+        <attribute name="label" translatable="yes">_Document Type</attribute>
         <attribute name="action">page.change-language</attribute>
       </item>
     </section>
